--- a/localisation/AML_decisions_l_english.yml
+++ b/localisation/AML_decisions_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ USA_war_plan_cyan:0 "War Plan Cyan"
+ USA_war_plan_cyan_desc:0 "Because of our prior shared love of democracy we have been patient and lenient with Atlantis, but they have demonstrated that they are willing to make themselves our enemies. We must swiftly eliminate them as a threat."
+ USA_execute_war_plan_cyan:1 "Execute War Plan Cyan"
  
  develop_mauruuru_bauxite_deposits:0 "Develop Bauxite Deposits in Mauruuru"
  develop_mauruuru_chromium_deposits:0 "Develop Chromium Deposits in Mauruuru"
