--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -87,8 +87,8 @@
  THU_fascism_DEF:0 "The Thulandic Order"
  THU_democratic:0 "Thule"
  THU_democratic_DEF:0 "Thule"
- THU_neutrality:0 "North Atlantic Federation"
- THU_neutrality_DEF:0 "The North Atlantic Federation"
+ THU_neutrality:0 "Thule"
+ THU_neutrality_DEF:0 "Thule"
  THU_communism:0 "Socialist Republic of Thule"
  THU_communism_DEF:0 "The Socialist Republic of Thule"
  THU_fascism_ADJ:0 "Thulander"
