Focus Tree Fixes

--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -73,8 +73,8 @@
  FSM_just_another_research_slot_desc:1 "Our great universities produce some of the best research in the world but there are a lot of young, attractive distractions there. Now we have a perfect place to send researchers so that they do not get distracted - Antarctica! Our scientists can spend months at a time doing nothing but efficiently researching when there are no external distractions!"
  FSM_brotherhood:1 "Brotherhood"
  FSM_brotherhood_desc:1 "The brotherhood of the Mu-Deutsche peoples is undeniable. We come from the same blood and thus we obviously belong together!"
- FSM_sieze_fjinland:1 "Seize Fjinland"
- FSM_sieze_fjinland_desc:1 "It has become increasingly clear the Dutch are incapable of administering their colonies. We would be doing them a favour by taking nearby Fjinland off their hands."
+ FSM_seize_fijnland:0 "Seize Fijnland"
+ FSM_seize_fijnland_desc:1 "It has become increasingly clear the Dutch are incapable of administering their colonies. We would be doing them a favour by taking nearby Fijnland off their hands."
  FSM_ban_japanese_immigration:1 "Ban Japanese Immigration"
  FSM_ban_japanese_immigration_desc:1 "Why should any non-German, let alone one from Japan, come into our country and take jobs from hardworking Mu-Deutsche people? No, we shall not allow them to come and dilute our ideals."
  FSM_join_allies:1 "Join Allies"
