--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -1,33 +1,58 @@
 ﻿l_english:
  ATL_main:0 "Religious Societies"
+ ATL_main_desc:0 "For centuries the influence of religion has been felt in Atlantis. To begin the necessary reforms in our society we must control and direct which societies come out on top; be they religious, criminal, or otherwise. Our nation must be united!"
  ATL_gostudi:0 "Gostudi Radicals"
+ ATL_gostudi_desc:0 "Founded on the principle of destroying organized religion from within, the Gostudi Cult seeks to infiltrate any religious group and to control it. They have strong fascist tendencies, and think nothing of using murder to further their goals."
  ATL_deimila:0 "Deimila Traditionalists"
+ ATL_deimila_desc:0 "Devotees of Atlantis' deistic religion, the Deimila Cult wants to preserve Atlantean traditions and values, maintaining the primacy of Atlantean belief in the Absent Creator. They work tirelessly to root out foreign corruptions of doctrine and tradition, preserving Atlantis as it is meant to be."
  ATL_vox_petri:0 "Institutio Vox Petri"
+ ATL_vox_petri_desc:0 "'The Voice of Peter' is a Catholic secret society which has been working slowly, but surely, in Atlantis since 1567CE. Their ultimate goal is to bring the Atlantean version of Christianity more in line with traditional forms, specifically Roman Apostolic Christianity. Their works may bring us closer to our neighbors in Europe."
  ATL_crime:0 "Deal with the Criminals"
+ ATL_crime_desc:0 "After bringing the religious societies under control and eliminating those that were threats to the state, our ministers would like to focus on the criminal parasites who bleed Atlantis dry for their own gain."
  ATL_attack_itorkanak:0 "Root out the Itorkanak Criminals"
+ ATL_attack_itorkanak_desc:0 "The Itorkanak Dynasty has created the fastest growing criminal enterprise in Atlantean history. If they are not stopped they will soon destabilize everything and will lead to the nation's downfall. Extortion, gambling, prostitution, and bribery; these criminals will stop at nothing to further their reach!"
  ATL_attack_kaprastiak:0 "Break the Kaprastiak Cartel"
+ ATL_attack_kaprastiak_desc:0 "The Kaprastiak Cartel has long been a fixture in the Atlantean underworld. Years of assassinations and 'accidents' have shown the difficulty of controlling this organization. "
  ATL_attack_all:0 "No Room for Organized Crime"
+ ATL_attack_all_desc:0 "If Atlantis is to move forward and take her rightful place in the civilized world then we cannot allow either the Kaprastiak Cartel or the Itorkanak Criminals to to survive. This will be a challenging and costly process, but the future of Atlantis requires sacrifice."
  ATL_isolation:0 "Push Away the World"
+ ATL_isolation_desc:0 "Atlantis alone stands, requiring neither help nor suggestion. We have sampled what the outside world has claimed to be 'good' for us, and found that we do not need it. We will focus on ourselves and our needs."
  ATL_isolation_2:0 "Expand the Atlantean Universities"
- ATL_befriend_kaprastiak:0 "The Kaprastiak Syndicate"
+ ATL_isolation_2_desc:0 "'Education is the key to success.' - Erguld Aserra. With improved educational infrastructure, especially at the university level, Atlantis will once again regain her status as the intellectual light of the world."
+ ATL_befriend_kaprastiak:0 "The Kaprastiak Cartel"
+ ATL_befriend_kaprastiak_desc:0 "The Kaprastiak Cartel has reached out to our government. With the fall of the Itorkanak Dynasty they indicate that they would be open to working closely with us to, in their words, '...strengthen our great nation.'"
  ATL_befriend_itorkanak:0 "Business with the Itorkanak"
+ ATL_befriend_itorkanak_desc:0 "The Kaprastiak Cartel is broken, its leaders dead or imprisoned. The Itorkanak have revealed a few of their operatives in our government and have begun demonstrating how they helped to orchestrate the destruction of the Kaprastiak Cartel. It certainly seems true that without their help it would have been almost impossible to have eliminiated the Kaprastiak menace."
  ATL_black_daggers:0 "Enlist the Black Daggers"
+ ATL_black_daggers_desc:0 "Since the Civil War ended in 1848 the government has kept the continued existence of the Black Daggers a closely guarded secret. Erguld Aserra, the self proclaimed 'Guda' or supreme leader, surrounded himself with these violent and power hungry individuals. Now that Atlantis is once again threatened by foreigners, as Aserra warned, perhaps we can use the Black Daggers."
  ATL_black_daggers_2:0 "Special Service Training Camps"
+ ATL_black_daggers_2_desc:0 "Special Service Training Camps"
  ATL_kaixanarak:0 "Legalize the Kaixanarak Cult"
+ ATL_kaixanarak_desc:0 "Legalize the Kaixanarak Cult"
  ATL_kaixanarak_left:0 "Arm the Naitastarak Inquisitors"
+ ATL_kaixanarak_left_desc:0 "Arm the Naitastarak Inquisitors"
  ATL_kaixanarak_right:0 "Mobilize the Tumurzek Maneaters"
+ ATL_kaixanarak_right_desc:0 "Mobilize the Tumurzek Maneaters"
  ATL_kaixanarak_final:0 "Control the Educational System"
+ ATL_kaixanarak_final_desc:0 "Control the Educational System"
  ATL_hexanchials:0 "Close Ties with the Hexanchial Society"
- ATL_hexanchials_2:0 ""
+ ATL_hexanchials_desc:0 "The longest lived secret society in Atlantis, the Hexanchial has been the guiding force in Atlantean politics since the first moments of the Republic. Should we continue to allow their stable, guiding hand to rule?"
+ ATL_hexanchials_2:0 "Hexanchial Society Grows"
+ ATL_hexanchials_2_desc:0 "The Hexanchial Society has discussed Atlantis' situation and determined that we must not enmesh ourselves in the affairs of the Europeans or Americans... except to sell arms and supplies for their foolish wars."
  ATL_kaiturn:0 "Found the Kaiturn Media Corporation"
- ATL_kaiturn_2:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
+ ATL_kaiturn_desc:0 "Found the Kaiturn Media Corporation"
+ ATL_kaiturn_2:0 "Kaiturn 2"
+ ATL_kaiturn_2_desc:0 ""
+ ATL_hastugudak:0 "Hastugudak"
+ ATL_hastugudak_desc:0 "The last remaining monarchical society, the Hastugudak, have worked behind the scenes since 1541CE to preserve the royal bloodline and to restore the Throne of Atlantis. They firmly believe that Atlantis needs her king, and while they may not be very powerful, they are numerous and very dedicated. They promise glory, support, and stability in exchange for a role in government."
+ ATL_karistig:0 "The Karistig Family"
+ ATL_karistig_desc:0 "Our oldest banking dynasty, the Karistig Family, has survived for three centuries in Atlantis' cutthroat secret world. They have managed to control a huge number of banks, counting houses, prisons, mining and extraction companies, and recently they have even gained a fair amount of control of the scientific community. You know that you can trust the Karistigs with a history like that."
+ ATL_karistig_2:0 "The Karistig Family 2"
+ ATL_karistig_2_desc:0 "XXX"
+ ATL_tensapiak:0 "The Tensapiak Banking Cartel"
+ ATL_tensapiak_desc:0 "Immediate benefits. That's what the Tensapiak Cartel promises us. These upstarts have only been around for twenty years or so, but they've already managed to control 90% of the Atlantean fish farms and floating plantations. While they may not have a long track record, they certainly can produce results."
+ ATL_UBG:0 "The United Bankers Guild"
+ ATL_UBG_desc:0 "Stability, stability, stability. That is what the United Bankers Guild is promising us. If we give them the control over the banks, markets, and financial instruments of the state, they promise us that Atlantis will prosper steadily forever. While this may be a bit of an overstatement, their promised stability would be welcomed. Especially after bringing the Tensapiak Cartel on board."
  ATL_:0 ""
  ATL_:0 ""
  ATL_:0 ""
