--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1044,3 +1044,5 @@
  VICTORY_POINTS_14208:0 "Ollebo"
  VICTORY_POINTS_7820:0 "Cordial"
  VICTORY_POINTS_14205:0 "Rycroft"
+ VICTORY_POINTS_14223:0 "Cabo San Lucas"
+ VICTORY_POINTS_7964:0 "Los Demonios"
