Names for all focuses
and a few changes in the structure of the tree :DDDDDDDDDDDDDDDD

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -11,18 +11,18 @@
  ATL_crime_desc:0 "After bringing the religious societies under control and eliminating those that were threats to the state, our ministers would like to focus on the criminal parasites who bleed Atlantis dry for their own gain."
  ATL_attack_itorkanak:0 "Root out the Itorkanak Criminals"
  ATL_attack_itorkanak_desc:0 "The Itorkanak Dynasty has created the fastest growing criminal enterprise in Atlantean history. If they are not stopped they will soon destabilize everything and will lead to the nation's downfall. Extortion, gambling, prostitution, and bribery; these criminals will stop at nothing to further their reach!"
- ATL_attack_kaprastiak:0 "Break the Kaprastiak Cartel"
- ATL_attack_kaprastiak_desc:0 "The Kaprastiak Cartel has long been a fixture in the Atlantean underworld. Years of assassinations and 'accidents' have shown the difficulty of controlling this organization. "
+ ATL_attack_kaprastiak:0 "Break the Kaprastiak Mafia"
+ ATL_attack_kaprastiak_desc:0 "The Kaprastiak Mafia has long been a fixture in the Atlantean underworld. Years of assassinations and 'accidents' have shown the difficulty of controlling this organization. "
  ATL_attack_all:0 "No Room for Organized Crime"
- ATL_attack_all_desc:0 "If Atlantis is to move forward and take her rightful place in the civilized world then we cannot allow either the Kaprastiak Cartel or the Itorkanak Criminals to to survive. This will be a challenging and costly process, but the future of Atlantis requires sacrifice."
+ ATL_attack_all_desc:0 "If Atlantis is to move forward and take her rightful place in the civilized world then we cannot allow either the Kaprastiak Mafia or the Itorkanak Criminals to to survive. This will be a challenging and costly process, but the future of Atlantis requires sacrifice."
  ATL_isolation:0 "Push Away the World"
  ATL_isolation_desc:0 "Atlantis alone stands, requiring neither help nor suggestion. We have sampled what the outside world has claimed to be 'good' for us, and found that we do not need it. We will focus on ourselves and our needs."
- ATL_isolation_2:0 "Expand the Atlantean Universities"
+ ATL_isolation_2:0 "Overturners' Educational Reforms"
  ATL_isolation_2_desc:0 "'Education is the key to success.' - Erguld Aserra. With improved educational infrastructure, especially at the university level, Atlantis will once again regain her status as the intellectual light of the world."
- ATL_befriend_kaprastiak:0 "The Kaprastiak Cartel"
- ATL_befriend_kaprastiak_desc:0 "The Kaprastiak Cartel has reached out to our government. With the fall of the Itorkanak Dynasty they indicate that they would be open to working closely with us to, in their words, '...strengthen our great nation.'"
+ ATL_befriend_kaprastiak:0 "The Kaprastiak Mafia"
+ ATL_befriend_kaprastiak_desc:0 "The Kaprastiak Mafia has reached out to our government. With the fall of the Itorkanak Dynasty they indicate that they would be open to working closely with us to, in their words, '...strengthen our great nation.'"
  ATL_befriend_itorkanak:0 "Business with the Itorkanak"
- ATL_befriend_itorkanak_desc:0 "The Kaprastiak Cartel is broken, its leaders dead or imprisoned. The Itorkanak have revealed a few of their operatives in our government and have begun demonstrating how they helped to orchestrate the destruction of the Kaprastiak Cartel. It certainly seems true that without their help it would have been almost impossible to have eliminiated the Kaprastiak menace."
+ ATL_befriend_itorkanak_desc:0 "The Kaprastiak Mafia is broken, its leaders dead or imprisoned. The Itorkanak have revealed a few of their operatives in our government and have begun demonstrating how they helped to orchestrate the destruction of the Kaprastiak Mafia. It certainly seems true that without their help it would have been almost impossible to have eliminiated the Kaprastiak menace."
  ATL_black_daggers:0 "Enlist the Black Daggers"
  ATL_black_daggers_desc:0 "Since the Civil War ended in 1848 the government has kept the continued existence of the Black Daggers a closely guarded secret. Erguld Aserra, the self proclaimed 'Guda' or supreme leader, surrounded himself with these violent and power hungry individuals. Now that Atlantis is once again threatened by foreigners, as Aserra warned, perhaps we can use the Black Daggers."
  ATL_black_daggers_2:0 "Special Service Training Camps"
@@ -37,46 +37,148 @@
  ATL_kaixanarak_final_desc:0 "Control the Educational System"
  ATL_hexanchials:0 "Close Ties with the Hexanchial Society"
  ATL_hexanchials_desc:0 "The longest lived secret society in Atlantis, the Hexanchial has been the guiding force in Atlantean politics since the first moments of the Republic. Should we continue to allow their stable, guiding hand to rule?"
- ATL_hexanchials_2:0 "Hexanchial Society Grows"
+ ATL_hexanchials_2:0 "Hexanchial Influence over the Industry"
  ATL_hexanchials_2_desc:0 "The Hexanchial Society has discussed Atlantis' situation and determined that we must not enmesh ourselves in the affairs of the Europeans or Americans... except to sell arms and supplies for their foolish wars."
  ATL_kaiturn:0 "Found the Kaiturn Media Corporation"
  ATL_kaiturn_desc:0 "Found the Kaiturn Media Corporation"
- ATL_kaiturn_2:0 "Kaiturn 2"
+ ATL_kaiturn_2:0 "Overtax the Foreign Media"
  ATL_kaiturn_2_desc:0 ""
- ATL_hastugudak:0 "Hastugudak"
+ ATL_hastugudak:0 "Legitimate the Hastugudak Movement"
  ATL_hastugudak_desc:0 "The last remaining monarchical society, the Hastugudak, have worked behind the scenes since 1541CE to preserve the royal bloodline and to restore the Throne of Atlantis. They firmly believe that Atlantis needs her king, and while they may not be very powerful, they are numerous and very dedicated. They promise glory, support, and stability in exchange for a role in government."
+ ATL_hastugudak_2:0 "Rewrite the History Books"
+ ATL_hastugudak_2_desc:0 "Rewrite the History Books"
+ ATL_hastugudak_3:0 "The Former Royal Lands"
+ ATL_hastugudak_3_desc:0 "The Former Royal Lands"
+ ATL_isolation_final_1:0 "Invite the Aristocracy to the Government"
+ ATL_isolation_final_1_desc:0 "Invite the Aristocracy to the Government"
+ ATL_isolation_final_2:0 "Restoration of the Empire"
+ ATL_isolation_final_2_desc:0 "Restoration of the Empire"
  ATL_karistig:0 "The Karistig Family"
  ATL_karistig_desc:0 "Our oldest banking dynasty, the Karistig Family, has survived for three centuries in Atlantis' cutthroat secret world. They have managed to control a huge number of banks, counting houses, prisons, mining and extraction companies, and recently they have even gained a fair amount of control of the scientific community. You know that you can trust the Karistigs with a history like that."
- ATL_karistig_2:0 "The Karistig Family 2"
+ ATL_karistig_2:0 "Bailout the Karistig Banks"
  ATL_karistig_2_desc:0 "XXX"
- ATL_tensapiak:0 "The Tensapiak Banking Cartel"
+ ATL_tensapiak:0 "The Tensapiak Cartel"
  ATL_tensapiak_desc:0 "Immediate benefits. That's what the Tensapiak Cartel promises us. These upstarts have only been around for twenty years or so, but they've already managed to control 90% of the Atlantean fish farms and floating plantations. While they may not have a long track record, they certainly can produce results."
  ATL_UBG:0 "The United Bankers Guild"
  ATL_UBG_desc:0 "Stability, stability, stability. That is what the United Bankers Guild is promising us. If we give them the control over the banks, markets, and financial instruments of the state, they promise us that Atlantis will prosper steadily forever. While this may be a bit of an overstatement, their promised stability would be welcomed. Especially after bringing the Tensapiak Cartel on board."
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- ATL_:0 ""
- _desc:0 "."
+ ATL_central_1:0 "Institute a Banking Monopoly"
+ ATL_central_1_desc:0 "Institute a Banking Monopoly"
+ ATL_central_UBG_1:0 "Break the Karistig Conglomerate"
+ ATL_central_UBG_1_desc:0 "Break the Karistig Conglomerate"
+ ATL_central_UBG_2:0 "Absorb the Karistig into the UBG"
+ ATL_central_UBG_2_desc:0 "Absorb the Karistig into the UBG"
+ ATL_central_2:0 "The Atlantean Libraries"
+ ATL_central_2_desc:0 "The Atlantean Libraries"
+ ATL_central_3:0 "Funds for the Industry"
+ ATL_central_3_desc:0 "Funds for the Industry"
+ ATL_central_isolation:0 "Expand the Industries in Osoa"
+ ATL_central_isolation_desc:0 "Expand the Industries in Osoa"
+ ATL_central_isolation_2:0 "The Pan-Atlantean Railroad"
+ ATL_central_isolation_2_desc:0 "The Pan-Atlantean Railroad"
+ ATL_central_allies:0 "Contracts with American Companies"
+ ATL_central_allies_desc:0 "Contracts with American Companies"
+ ATL_central_allies_2:0 "Lease African Ports"
+ ATL_central_allies_2_desc:0 "Lease African Ports"
+ ATL_orange_masks:0 "Society of the Orange Masks"
+ ATL_orange_masks_desc:0 "Society of the Orange Masks"
+ ATL_red_bandanas:0 "The Red Bandana Revolutionaries"
+ ATL_red_bandanas_desc:0 "The Red Bandana Revolutionaries"
+ ATL_green_brigade:0 "Align with the Green Brigade"
+ ATL_green_brigade_desc:0 "Align with the Green Brigade"
+ ATL_com_1:0 "Collectivize the UBG's Properties"
+ ATL_com_1_desc:0 "Collectivize the UBG's Properties"
+ ATL_com_2:0 "Socialism within the Atlantean Tradition"
+ ATL_com_2_desc:0 "Socialism within the Atlantean Tradition"
+ ATL_com_3:0 "A Common Cause"
+ ATL_com_3_desc:0 "A Common Cause"
+ ATL_axis_1:0 "Paramilitary Youth Organization"
+ ATL_axis_1_desc:0 "Paramilitary Youth Organization"
+ ATL_axis_2:0 "Join the Axis"
+ ATL_axis_2_desc:0 "Join the Axis"
+ ATL_axis_3:0 "Nationalize all the Banks"
+ ATL_axis_3_desc:0 "Nationalize all the Banks"
+ ATL_open:0 "Open the Gates to the World"
+ ATL_open_desc:0 "Open the Gates to the World"
+ ATL_attack_sicilians:0 "Antagonize the Sicilian Mafia"
+ ATL_attack_sicilians_desc:0 "Antagonize the Sicilian Mafia"
+ ATL_attack_ringvereine:0 "Attack the Ringvereine"
+ ATL_attack_ringvereine_desc:0 "Attack the Ringvereine"
+ ATL_germany:0 "Collaborate with the German Government"
+ ATL_germany_desc:0 "Collaborate with the German Government"
+ ATL_befriend_sicilians:0 "Expand the Sicilian Operations"
+ ATL_befriend_sicilians_desc:0 "Expand the Sicilian Operations"
+ ATL_befriend_siegels:0 "Business with the Siegels"
+ ATL_befriend_siegels_desc:0 "Business with the Siegels"
+ ATL_befriend_ringvereine:0 "A Foothold on Germany"
+ ATL_befriend_ringvereine_desc:0 "A Foothold on Germany"
+ ATL_rothschilds:0 "Invite the Rothschild Bankers"
+ ATL_rothschilds_desc:0 "Invite the Rothschild Bankers"
+ ATL_rothschilds_2:0 "Cheap Loans"
+ ATL_rothschilds_2_desc:0 "Cheap Loans"
+ ATL_USA_1:0 "Influence over the United States"
+ ATL_USA_1_desc:0 "Influence over the United States"
+ ATL_USA_2:0 "Industrial Espionage"
+ ATL_USA_2_desc:0 "Industrial Espionage"
+ ATL_UK_1:0 "Infiltrate the United Kingdom"
+ ATL_UK_1_desc:0 "Infiltrate the United Kingdom"
+ ATL_UK_2:0 "Divert Resources Trade to Atlantis"
+ ATL_UK_2_desc:0 "Divert Resources Trade to Atlantis"
+ ATL_allies_final:0 "Join the Allies"
+ ATL_allies_final_desc:0 "Join the Allies"
+ ATL_mil_main:0 "Increase the Budget for the Navy"
+ ATL_mil_main_desc:0 "Increase the Budget for the Navy"
+ ATL_home_defense:0 "Homeland Defense"
+ ATL_home_defense_desc:0 "Homeland Defense"
+ ATL_DD:0 "Trade Protection"
+ ATL_DD_desc:0 "Trade Protection"
+ ATL_fleet_in_being:0 "Revise the Naval Strategies"
+ ATL_fleet_in_being_desc:0 "Revise the Naval Strategies"
+ ATL_radars:0 "Eyes in the Sky"
+ ATL_radars_desc:0 "Eyes in the Sky"
+ ATL_mainland_forts:0 "Fortify the Cities"
+ ATL_mainland_forts_desc:0 "Fortify the Cities"
+ ATL_mech:0 "Mechanized Divisions"
+ ATL_mech_desc:0 "Mechanized Divisions"
+ ATL_fighters:0 "Close the Air Force Gap"
+ ATL_fighters_desc:0 "Close the Air Force Gap"
+ ATL_nav_bombers:0 "Protection for the Coasts"
+ ATL_nav_bombers_desc:0 "Protection for the Coasts"
+ ATL_parasite:0 "Parasite Fighters"
+ ATL_parasite_desc:0 "Parasite Fighters"
+ ATL_strat_bombers:0 "Strategic Bombing"
+ ATL_strat_bombers_desc:0 "Strategic Bombing"
+ ATL_sumendia:0 "Sumendian Dockyards"
+ ATL_sumendia_desc:0 "Sumendian Dockyards"
+ ATL_intervention:0 "Project Atlantean Power"
+ ATL_intervention_desc:0 "Project Atlantean Power"
+ ATL_SS:0 "Tonnage War"
+ ATL_SS_desc:0 "Tonnage War"
+ ATL_trade_interdiction:0 "Offensive Tactics"
+ ATL_trade_interdiction_desc:0 "Offensive Tactics"
+ ATL_naval_aviation:0 "Naval Aviation Experiments"
+ ATL_naval_aviation_desc:0 "Naval Aviation Experiments"
+ ATL_heavy_fighters:0 "Build a True Air Force"
+ ATL_heavy_fighters_desc:0 "Build a True Air Force"
+ ATL_amphibious:0 "Prepare the Invasion"
+ ATL_amphibious_desc:0 "Prepare the Invasion"
+ ATL_armor:0 "Breaking the Lines"
+ ATL_armor_desc:0 "Breaking the Lines"
+ ATL_VLFP:0 "Militarize the VLFPs"
+ ATL_VLFP_desc:0 "Militarize the VLFPs"
+ ATL_light_bombers:0 "Light Bombers"
+ ATL_light_bombers_desc:0 "Light Bombers"
+ ATL_africa_main:0 "The Atlantean Colonies"
+ ATL_africa_main_desc:0 "The Atlantean Colonies"
+ ATL_african_ports:0 "Expand the Port Infrastructure"
+ ATL_african_ports_desc:0 "Expand the Port Infrastructure"
+ ATL_african_infra:0 "Pave the Roadways"
+ ATL_african_infra_desc:0 "Pave the Roadways"
+ ATL_african_factories_1:0 "Invest in the Colonial Production"
+ ATL_african_factories_1_desc:0 "Invest in the Colonial Production"
+ ATL_african_factories_2:0 "Militarize the Colonies"
+ ATL_african_factories_2_desc:0 "Militarize the Colonies"
+ ATL_african_forts:0 "Fortify our African Cities"
+ ATL_african_forts_desc:0 "Fortify our African Cities"
+ ATL_african_airfields:0 "Colonial Air Force"
+ ATL_african_airfields_desc:0 "Colonial Air Force"
  
