Atlantean tree done :DDDDD

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -52,7 +52,7 @@
  ATL_isolation_final_1:0 "Invite the Aristocracy into the Government"
  ATL_isolation_final_1_desc:0 "Now with the full support of the Hexanchials, we can start the real reforms we have been waiting for, and repay the royal families for their help. Our politicians will gradually lose their functions as we transfer power to the aristocrats."
  ATL_isolation_final_2:0 "Restoration of the Empire"
- ATL_isolation_final_2_desc:0 "For almost 400 years Atlantis has experimented with republicanism, and the experiment has failed. In just a few days Atlantis' rightful king will re-assume the Throne of Atlantis and guide Atlantis to her proper place, at the head of civilization. The public now anxiously awaits the king. We must prepare the adoring crowds for the king's return!"
+ ATL_isolation_final_2_desc:0 "For almost 400 years Atlantis has experimented with republicanism, and the experiment has failed. In just a few days Atlantis' rightful Emperor, Naizaretal Za Mawesta Demedrot, will re-assume the Throne of Atlantis and guide Atlantis to her proper place, at the head of civilization. The public now anxiously awaits Him. We must prepare the adoring crowds for the Emperor's return!"
  ATL_karistig:0 "The Karistig Family"
  ATL_karistig_desc:0 "Our oldest banking dynasty, the Karistig Family, has survived for three centuries in Atlantis' cutthroat secret world. They have managed to control a huge number of banks, counting houses, prisons, mining and extraction companies, and recently they have even gained a fair amount of control of the scientific community. You know that you can trust the Karistigs with a history like that."
  ATL_karistig_2:0 "Bailout the Karistig Banks"
@@ -60,7 +60,7 @@
  ATL_tensapiak:0 "The Tensapiak Cartel"
  ATL_tensapiak_desc:0 "Immediate benefits. That's what the Tensapiak Cartel promises us. They are aggressive in their strategies and promise huge gains. These upstarts have only been around for twenty years or so, but they've already managed to control 90% of the Atlantean fish farms and floating plantations. While they may not have a long track record, they certainly can produce results."
  ATL_UBG:0 "The United Bankers Guild"
- ATL_UBG_desc:0 "The UBG is a conglomerate of small bankers that finance many local activities throughout the whole of Atlantis. Led by free-market capitalists and the more libertarian minded, they are only interested in the money. If we give them the access to the markets and financial instruments of the state, they promise us that Atlantis will prosper like never before, especially after bringing the Tensapiak Cartel on board."
+ ATL_UBG_desc:0 "The UBG is a conglomerate of small bankers that finance many local activities throughout the whole of Atlantis. Led by free-market capitalists and the more libertarian minded, they are only interested in the money. If we give them the access to the markets and financial instruments of the state, they promise us that we will prosper like never before."
  ATL_central_1:0 "Institute a Banking Monopoly"
  ATL_central_1_desc:0 "The Karistig Family doesn't like competition. We can force the selling of smaller banks to the Karistigs at a price they deem fair. The United Bankers Guild won't approve this, but their waning power now poses no threat against our new Karistig friends, and we will guarantee access to friendly bankers who will fund our great works from now on."
  ATL_central_UBG_1:0 "Break the Karistig Conglomerate"
@@ -75,10 +75,14 @@
  ATL_central_isolation_desc:0 "Osoa is a large city with a lot of untapped potential. We will invest in the growth of their industrial complexes and infrastructure so that they can be on par with other prosperous Atlantean cities."
  ATL_central_isolation_2:0 "The Pan-Atlantean Railroad"
  ATL_central_isolation_2_desc:0 "The horseshoe shaped island of Atlantis is the beating heart of our country. We will see huge benefits if we build a railroad that connects all of the major cities."
+ ATL_central_isolation_3:0 "Atlantic Domination"
+ ATL_central_isolation_3_desc:0 "Our country sits in the middle of the Atlantic Ocean. If we are to go alone, we must be prepared to fight any force that may pose a threat to Atlantis. Our dockyards must be functioning at maximum efficiency to make sure our navy can stand a chance against the world."
  ATL_central_allies:0 "Contracts with American Companies"
  ATL_central_allies_desc:0 "The Americans have large and efficient companies that have an interest in the Atlantean market. We can benefit from an arrangement where they bring their factories to our land and in exchange we open our markets to their products."
  ATL_central_allies_2:0 "Lease African Ports"
  ATL_central_allies_2_desc:0 "Our colonies are by far the most developed west-coast cities in Africa. That, combined with the fact that the United States has no real foothold on the continent, puts us in an excellent position to bargain with the Americans for unlimited access to our African ports."
+ ATL_central_allies_3:0 "Connect the Colonies"
+ ATL_central_allies_3_desc:0 "Our colonies are separated by the French and British lands. If we can build a railway between them passing through those lands, we can both connect our colonies by land and improve our relations with these two countries."
  ATL_orange_masks:0 "Society of the Orange Masks"
  ATL_orange_masks_desc:0 "The Orange Masks are extremely popular among young Atlanteans. Revolutionary in nature, they seek to transform the state into a more powerful and pervasive structure that controls the most important aspects of society. The is a problem; they don't really agree on how the economy should work, and the tensions within the group are high."
  ATL_red_bandanas:0 "The Red Bandana Revolutionaries"
@@ -88,7 +92,7 @@
  ATL_com_1:0 "Collectivize the UBG's Properties"
  ATL_com_1_desc:0 "The UBG represents what is most vile in our society, and the government's deal with them will tarnish our history for decades to come. Although the organization itself is an evil to be destroyed, it concentrated almost all the rotten eggs in the same basket, making it easier to deal with. Their stolen property will be given back to the people that own it."
  ATL_com_2:0 "Socialism within the Atlantean Tradition"
- ATL_com_2_desc:0 "The capitalistic worldview twisted the values that built our great civilization in the past. Working for the collective, fair compensation for labor and helping the poor are recorded in even the oldest religious and historical books. This is a testament of the Atlantean natural inclination toward socialism, and our educational and religious institutions will from now on emphasize this and teach the correct values to our citizens."
+ ATL_com_2_desc:0 "The capitalistic worldview twisted the values that built our great civilization in the past. Working for the collective, fair compensation for labor and helping the poor are recorded in even the oldest religious and historical books. This is a testament of the Atlantean natural inclination toward socialism."
  ATL_com_3:0 "A Common Cause"
  ATL_com_3_desc:0 "The overthrow of the capitalist system that enslaves humanity has begun, and the very existence of the Soviet Union is a stake to the Bourgeoisie Soul. We must ally with them and protect the revolution at all costs!"
  ATL_axis_1:0 "The Young Brigade"
@@ -125,8 +129,8 @@
  ATL_UK_2_desc:0 "The British control many resource-producing areas all around the world. Now that we have them in our hands, we can prioritize trade to Atlantis, and feed our hungry factories."
  ATL_allies_final:0 "Join the Allies"
  ATL_allies_final_desc:0 "They can love us or hate us, but they have no choice in the matter. We're joining the Allies and we will make sure their politicians will approve the decision."
- ATL_mil_main:0 "Increase the Budget for the Navy"
- ATL_mil_main_desc:0 "Our navy is the first line of defense of our homeland. Naturally, we must do what we can to foment growth of our maritime forces."
+ ATL_mil_main:0 "Atlantean Institute for Naval Research"
+ ATL_mil_main_desc:0 "Our navy is the first line of defense of our homeland. Naturally, we must do what we can to foment the modernization of our maritime forces."
  ATL_home_defense:0 "Homeland Defense"
  ATL_home_defense_desc:0 "Foreign affairs are of no use to us. We should prioritize our safety."
  ATL_DD:0 "Trade Protection"
@@ -181,4 +185,85 @@
  ATL_african_forts_desc:0 "With all the investments we've made it's paramount that we defend our African colonies to the last centimeter of land."
  ATL_african_airfields:0 "Colonial Air Force"
  ATL_african_airfields_desc:0 "Our newly built air force can't operate in Africa due to the lack of proper runways. We will change this by building a few airstrips with the required infrastructure to support them."
+ 
+ #######cosmetic tags
+ ATL_SP_fascism:0 "Black Dagger Atlantis"
+ ATL_SP_fascism_DEF:0 "Black Dagger Atlantis"
+ ATL_SP_neutrality:0 "Empire of Atlantis"
+ ATL_SP_neutrality_DEF:0 "Empire of Atlantis"
+ 
+ #######tooltips
+ ATL_attack_itorkanak_tooltip:0 "Starts the event chain to destroy the Itorkanak \n"
+ ATL_attack_kaprastiak_tooltip:0 "Starts the event chain to destroy the Kaprastiak \n"
+ ATL_attack_all_tooltip:0 "We are going to fight both criminal organizations \n"
+ ATL_naitastarak_tooltip:0 "Allows decisions to suppress dissident thought \n"
+ ATL_panatlantean_railroad:0 "§gAdd maximum infrastructure in all mainland states \n§"
+ ATL_industrial_espionage:0 "§gAllows industrial espionage decisions \n§"
+ ATL_air_reforms:0 "§gAllows decisions to remove the §yOutdated Air Force§  modifier \n§"
+ ATL_forts:0 "§gAdds 3 forts and 3 coastal forts to every core urban province in Atlantis \n§"
+ 
+ #######ideas
+ ATL_kaprastiak_at_war:0 "War on the Kaprastiak"
+ ATL_itorkanak_at_war:0 "War on the Itorkanak"
+ ATL_trading_empire:0 "Historical Trading Empire"
+ ATL_naval_power:0 "Naval Tradition"
+ ATL_useless_air_force:0 "Outdated Air Force"
+ ATL_gostudis_in_government:0 "Gostudis in Government"
+ ATL_kaprastiak_in_government:0 "Alliance with the Kaprastiak"
+ ATL_itorkanak_in_government:0 "Alliance with the Itorkanak"
+ ATL_sicilians_enemies:0 "War on the Sicilians"
+ ATL_ringvereine_enemies:0 "War on the Ringvereine"
+ ATL_building_research_center:0 "Building Research Center"
+ ATL_overturners_reforms:0 "Overturners Reforming the Education"
+ ATL_isolation_idea:0 "Isolationist Mindset"
+ ATL_black_daggers_idea:0 "Black Daggers in Power"
+ ATL_BD_camps:0 "Black Daggers Camps"
+ ATL_kaixanarak_shock:0 "Populace in Shock"
+ ATL_tumurzek:0 "Tumurzek Maneaters"
+ ATL_BD_education:0 "Black Dagger Indoctrination"
+ ATL_hastugudak_education:0 "History Revision"
+ ATL_hexanchials_in_government:0 "Hexanchial Influence"
+ ATL_kaiturn_media:0 "Kaiturn Media"
+ ATL_substituting_politicians_hastugudak:0 "Monarchist Political Reform"
+ ATL_restored_empire:0 "Restored Empire"
+ ATL_karistigs_in_government:0 "Karistigs in Government"
+ ATL_karistig_pissed_off:0 "Karistigs Opposing the Government"
+ ATL_UBG_idea:0 "United Bankers Guild"
+ ATL_karistig_sabotaging_government:0 "Karistigs Sabotaging Government"
+ ATL_funding_industries:0 "Subsidizing Industries"
+ ATL_leasing_african_ports:0 "Leasing African Ports"
+ ATL_atlantic_domination:0 "Atlantic Domination Efforts"
+ ATL_german_influence:0 "German Influence"
+ ATL_extremists:0 "Extremists in Government"
+ ATL_socialist_tradition:0 "Socialist in Atlantean Tradition"
+ ATL_business_with_rothschilds:0 "Rothschild Influence"
+ ATL_green_brigade_recruitment:0 "The Young Brigade"
+ ATL_dismantling_UBG:0 "Dismantling the UBG"
+ 
+ #######techs
+ ATL_parasite_fighter:0 "Parasite Fighters"
+ ATL_light_bomber:0 "Light Bombers"
+ ATL_VLFP:0 "Very Large Floating Platform"
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
